syntax = "proto3";

/* >>
import "google/api/annotations.proto";
<< */

package microsoft.eshoponcontainers.integrationevents.order.status;

option csharp_namespace="Microsoft.eShopOnContainers.Services.Kafka.Protobuf.IntegrationEvents.OrderStatus";

message GracePeriodConfirmedProto {
  int32 order_id = 1;
}